tests/ui-nightly/diagnostic-not-implemented-known-layout.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::KnownLayout` is not satisfied
  --> tests/ui-nightly/diagnostic-not-implemented-known-layout.rs:18:26
   |
18 |     takes_known_layout::<NotZerocopy>();
   |                          ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `zerocopy::KnownLayout` is not implemented for `NotZerocopy`
  --> tests/ui-nightly/../../zerocopy-derive/tests/include.rs:48:5
   |
48 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(KnownLayout)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::KnownLayout`:
             &T
             &mut T
             ()
             *const T
             *mut T
             AU16
             AtomicBool
             AtomicI16
           and 63 others
note: required by a bound in `takes_known_layout`
  --> tests/ui-nightly/diagnostic-not-implemented-known-layout.rs:21:26
   |
21 | fn takes_known_layout<T: KnownLayout>() {}
   |                          ^^^^^^^^^^^ required by this bound in `takes_known_layout`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
